# football-analysis-platform-py-starter

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml
app/: config.py  main.py
app/db/: __init__.py  models.py  session.py
app/lib/: competitions.py  format.py  league_stats.py  match_display.py  team_form.py  team_search.py
app/services/: football.py
app/static/css/: app.css  tailwind.input.css
app/static/js/: theme.js
app/store/: __init__.py  football_store.py
app/templates/: base.html  index.html  standings.html  stats.html  team_detail.html
app/templates/partials/: empty.html  form_chips.html  league_select.html  match_list.html  standings_table.html  team_crest.html
app/web/: __init__.py  deps.py  pages.py  partials.py  templating.py
data/: football.db
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/: conftest.py  test_football_store.py  test_match_display.py  test_models.py  test_pages.py  test_team_form.py  test_team_search.py
