[project]
name = "football-analysis-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "fastapi",
    "httpx",
    "jinja2",
    "pydantic-settings",
    "python-multipart",
    "sqlalchemy>=2.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
